# gxtexture_base_build

./: .gitmodules  README.md  build.sh  clean.sh  copylibs.sh  install.sh
gxtexture/: CMakeLists.txt
gxtexture/cmake/: gxtexture_build_clang.cmake  gxtexture_build_gcc.cmake
octree_color_quantizer/: CMakeLists.txt
octree_color_quantizer/cmake/: octree_color_quantizer_build_clang.cmake  octree_color_quantizer_build_gcc.cmake
tga/: CMakeLists.txt
tga/cmake/: tga_build_clang.cmake  tga_build_gcc.cmake
txtr/: CMakeLists.txt
txtr/cmake/: txtr_build_clang.cmake  txtr_build_gcc.cmake
